kubernetes/storj/traefik-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: storj
  namespace: storj
spec:
  type: ExternalName
  externalName: truenas.mng.skaal.lan
  ports:
    - port: 20909
      targetPort: 20909

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: storj
  namespace: storj
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`storj.skaal.dev`)
      kind: Rule
      services:
        - name: storj
          port: 20909
  tls:
    secretName: storj-tls
